notes/coords_regex.txt
zcrosby@ubu:~/projects/TPP-Site-Feedback/site-feedback$ python
Python 2.7.3 (default, Feb 27 2014, 19:39:10) 
[GCC 4.7.2] on linux2
Type "help", "copyright", "credits" or "license" for more information.
>>> s = [u'(41.82284384000047, -71.41126890899966)']"
  File "<stdin>", line 1
    s = [u'(41.82284384000047, -71.41126890899966)']"
                                                    ^
SyntaxError: EOL while scanning string literal
>>> [u'(41.82284384000047, -71.41126890899966)']
[u'(41.82284384000047, -71.41126890899966)']
>>> d = [u'(41.82284384000047, -71.41126890899966)']
>>> d[0]
u'(41.82284384000047, -71.41126890899966)'
>>> import re
>>> re.sub(r"(\(|\))", "", d[0])
u'41.82284384000047, -71.41126890899966'
>>> re.sub(r"(\(|\))", "", d[0]).split(",")
[u'41.82284384000047', u' -71.41126890899966']
>>> re.sub(r"(\(|\)|\s)", "", d[0])
u'41.82284384000047,-71.41126890899966'
>>> re.sub(r"(\(|\)|\s)", "", d[0]).split()
[u'41.82284384000047,-71.41126890899966']
>>>
